recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
  if (levels == 0) {
    avance(length)
    return
  }
  
  pentaKock(levels - 1, length * 0.4)
  gauche(360 / 5)
  
  pentaKock(levels - 1, length * 0.4)
  droite(360 / 5)
  
  pentaKock(levels - 1, length * 0.4)
  droite(360 / 5)
  
  pentaKock(levels - 1, length * 0.4)
  droite(360 / 5)
  
  pentaKock(levels - 1, length * 0.4)
  gauche(360 / 5)
}